force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <description>Logs exceptions captured in the org</description>
    <label>Exception</label>
    <nameField>
        <displayFormat>EXC-{00000}</displayFormat>
        <label>Exception Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>