force-app/main/default/objects/Exception__c/fields/Exception_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Exception_Date_and_Time__c</fullName>
    <description>The date and time on which the exception was created</description>
    <formula>CreatedDate</formula>
    <inlineHelpText>The date and time on which the exception was created</inlineHelpText>
    <label>Exception Date and Time</label>
    <type>DateTime</type>
</CustomField>