force-app/main/default/objects/Exception__c/fields/Exception_Details__c.field-meta.xml
<CustomField>
    <fullName>Exception_Details__c</fullName>
    <description>The information regarding the exception itself</description>
    <inlineHelpText>The information regarding the exception itself</inlineHelpText>
    <label>Exception Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>