force-app/main/default/objects/Exception__c/fields/Link_to_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Record__c</fullName>
    <description>The link to the record involved in the exception; if a batch process threw the exception, the link to the first record processed by the batch process.W-014075</description>
    <formula>$CustomMetadata.Org_Variables__mdt.JobTr_Org.Org_URL__c + &apos;/&apos; +  Obj_Record_Id__c</formula>
    <inlineHelpText>The link to the record involved in the exception; if a batch process threw the exception, the link to the first record processed by the batch process</inlineHelpText>
    <label>Link to Record</label>
    <type>Text</type>
</CustomField>