force-app/main/default/objects/Exception__c/fields/Obj_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Obj_Record_Id__c</fullName>
    <description>The unique record ID of the object record on which the exception was thrown, or, for batch jobs, the first record of the batch in which the exception was thrown</description>
    <inlineHelpText>The unique record ID of the object record on which the exception was thrown, or, for batch jobs, the first record of the batch in which the exception was thrown</inlineHelpText>
    <label>Obj Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>