force-app/main/default/objects/Exception__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>The object tyoe upon which the exception was thrown</description>
    <inlineHelpText>The object tyoe upon which the exception was thrown</inlineHelpText>
    <label>Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>