force-app/main/default/objects/Exception__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>The class or flow being executed when the exception was thrown</description>
    <inlineHelpText>The class or flow being executed when the exception was thrown</inlineHelpText>
    <label>Operation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>