force-app/main/default/objects/Exception__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>The first and last name of the owner if the owner is a user, and the name of the queue, if the owner is a queue.</description>
    <formula>IF(BEGINS(OwnerId,&apos;005&apos;), Owner:User.FirstName + &apos; &apos; + Owner:User.LastName, Owner:Queue.QueueName )</formula>
    <inlineHelpText>The first and last name of the owner if the owner is a user, and the name of the queue, if the owner is a queue</inlineHelpText>
    <label>Owner Name</label>
    <type>Text</type>
</CustomField>