force-app/main/default/objects/Exception__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>The particular process being executed at the time of the exception. W-014715</description>
    <inlineHelpText>The particular process being executed at the time of the exception</inlineHelpText>
    <label>Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>