force-app/main/default/objects/Exception__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Date_and_Time__c</columns>
    <columns>Object__c</columns>
    <columns>Owner_Name__c</columns>
    <columns>Operation__c</columns>
    <columns>Process__c</columns>
    <columns>Obj_Record_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>